# autoArxiv

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_digest.yml
config/: topics.toml
data/: seen_papers.json
reports/: 2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-04-02.md  2026-04-04.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  (+39 more)
src/auto_arxiv/: arxiv.py  config.py  filtering.py  mailer.py  main.py  models.py  reporting.py  store.py  summarizer.py
